<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/team_name_a"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/id_team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:paddingBottom="24dp"
                android:text="@string/txt_team_a_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="plusThreePointForTeamA"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/txt_btn_three_plus" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="plusTwoPointForTeamA"
                android:paddingBottom="8dp"
                android:text="@string/txt_btn_two_plus" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="freeThrowForTeamA"
                android:text="@string/txt_btn_free_throw" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:paddingBottom="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/team_name_b"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/id_team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:paddingBottom="24dp"
                android:text="@string/txt_team_b_score"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="plusThreePointForTeamB"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/txt_btn_three_plus" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="plusTwoPointForTeamB"
                android:paddingBottom="8dp"
                android:text="@string/txt_btn_two_plus" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="freeThrowForTeamB"
                android:text="@string/txt_btn_free_throw" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/txt_btn_reset"
        android:layout_marginBottom="32dp"
        android:onClick="resetScore"/>
</RelativeLayout>